# calamity

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  TODO.md  index.html  package-lock.json  package.json  tray.html  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: linux-release.yml  manual-release.yml  pages.yml
crates/calamity-cli/: Cargo.toml
crates/calamity-cli/src/: main.rs
crates/calamity-core/: Cargo.toml
crates/calamity-core/src/: lib.rs  logging.rs
crates/calamity-core/src/ipc/: client.rs  framing.rs  mod.rs  protocol.rs  server.rs
crates/calamity-core/src/platform/: gateway.rs  linux.rs  macos.rs  mod.rs  network.rs  system_proxy.rs
crates/calamity-core/src/singbox/: ai_auth_api.rs  ai_auth_ca.rs  ai_auth_reverse_proxy.rs  ai_auth_storage.rs  clash_api.rs  clash_parse.rs  config.rs  config_io.rs  dns_storage.rs  gateway.rs  mod.rs  nodes_storage.rs  process.rs  rules_storage.rs  ruleset_market.rs  storage.rs  subscription_fetch.rs  subscriptions_storage.rs  tailscale_api.rs  tailscale_config.rs  tailscale_storage.rs
crates/calamity-core/src/singbox/bgp/: codec.rs  discovery.rs  fsm.rs  mod.rs  speaker.rs  storage.rs  sync_session.rs
crates/calamityd/: Cargo.toml
crates/calamityd/src/: main.rs
docs/: guide.md  index.html  manual.html
docs/superpowers/plans/: 2026-03-29-calamity-frontend.md  2026-03-29-connections.md  2026-03-29-dashboard-real-data.md  2026-03-29-dns-settings.md  2026-03-29-nodes-integration.md  2026-03-29-route-rules.md  2026-03-29-settings-integration.md  2026-03-29-singbox-integration.md  2026-03-29-subscriptions.md  2026-03-30-config-import-export.md  2026-03-30-tray-integration.md  2026-03-30-tray-rule-list.md  2026-03-31-clash-subscription.md  2026-03-31-singbox-tailscale-endpoint.md  2026-04-01-ruleset-market.md  2026-04-02-dns-auto-detour.md  2026-04-03-process-info-and-app-picker.md  2026-04-04-gateway-mode.md  2026-04-05-bgp-rule-sync.md  2026-04-05-plan1-workspace-core-extraction.md  2026-04-06-bgp-persistent-sync.md
docs/superpowers/specs/: 2026-03-29-calamity-frontend-design.md  2026-03-29-tailscale-integration-design.md  2026-04-05-bgp-rule-sync-design.md  2026-04-05-cross-platform-cli-design.md
packaging/pacman/: PKGBUILD
packaging/systemd/: calamityd.service
src/: App.tsx  TrayApp.tsx  index.css  main.tsx  tray.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_auth.rs  apps.rs  bgp_sync.rs  browser.rs  config_io.rs  connection.rs  connections.rs  dns.rs  logs.rs  mod.rs  nodes.rs  rules.rs  ruleset_market.rs  settings.rs  subscriptions.rs  tailscale.rs  traffic.rs
src-tauri/src/singbox/: clash_api.rs  clash_parse.rs  config.rs  config_io.rs  gateway.rs  mod.rs  outbounds.rs  process.rs  rules_storage.rs  storage.rs  subscription_fetch.rs  subscriptions_storage.rs  tailscale_api.rs  tailscale_cli.rs  tailscale_config.rs  tailscale_storage.rs
src-tauri/src/singbox/bgp/: codec.rs  fsm.rs  speaker.rs
src/components/: AppErrorBoundary.tsx  AppLayout.tsx  FatalErrorScreen.tsx  Sidebar.tsx
src/components/__tests__/: Sidebar.collapse.test.tsx  Sidebar.i18n.test.tsx
src/components/flow/: FlowCanvas.tsx  flow-overrides.css  flow-types.ts  flow-utils.ts  useAutoLayout.ts  useFlowSync.ts
src/components/flow/edges/: FlowEdge.tsx
src/components/flow/nodes/: DnsNode.tsx  MatchNode.tsx  OutboundNode.tsx
src/components/flow/panels/: NodeAddPanel.tsx  NodeEditPanel.tsx
src/i18n/: index.ts  locale.ts  resources.ts
src/i18n/__tests__/: i18n.test.ts  locale.test.ts
src/lib/: flags.ts  log-event.ts  proxy-uri.ts
src/lib/__tests__/: log-event.test.ts  manual-release-workflow.test.ts  pages-workflow.test.ts  proxy-uri.test.ts
src/pages/: AiAuthPage.tsx  BgpSyncPage.tsx  ConnectionsPage.tsx  DashboardPage.tsx  DnsPage.tsx  FlowEditorPage.tsx  LogsPage.tsx  NodesPage.tsx  RuleSetMarketPage.tsx  RulesPage.tsx  SettingsPage.tsx  SubscriptionsPage.tsx  TailnetPage.tsx
src/pages/__tests__/: DnsPage.tun.test.tsx  SettingsPage.tun.test.tsx
src/services/: ai-auth.ts  bgp-sync.ts  connection.ts  connections.ts  dns.ts  logs.ts  nodes.ts  rules.ts  ruleset-market.ts  settings.ts  subscriptions.ts  tailnet.ts  types.ts
src/services/__tests__/: connection-snapshot.test.ts  connection-tauri.test.ts  connection.test.ts  connections.test.ts  dns.test.ts  logs.test.ts  nodes-add.test.ts  nodes-groups.test.ts  nodes-protocol.test.ts  nodes.test.ts  rules-ruleset.test.ts  rules.test.ts  settings-tun.test.ts  settings.test.ts  subscriptions.test.ts  tailnet-funnel.test.ts  tailnet.test.ts
src/stores/: bgp-sync.ts  connection.ts  connections.ts  dns.ts  logs.ts  nodes.ts  rules.ts  ruleset-market.ts  settings.ts  subscriptions.ts  tailnet.ts
src/stores/__tests__/: connection.disconnect.test.ts  connection.events.test.ts  connection.test.ts  dashboard-switch-node.test.ts  dns.test.ts  logs.test.ts  nodes-add.test.ts  nodes.test.ts  rules.test.ts  settings.test.ts  tailnet.test.ts
src/tray/: TrayActions.tsx  TrayEnhancedMode.tsx  TrayImportNode.tsx  TrayModeSwitch.tsx  TrayRuleList.tsx  TraySiteRule.tsx  TrayStatus.tsx
tailscale/: tailscaled.log.conf  tailscaled.log2.txt  tailscaled.state
