[package]
name = "calamity"
version = "0.1.0"
description = "A macOS proxy client based on SingBox"
authors = ["you"]
edition = "2021"

[lib]
name = "calamity_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
