[package]
name = "calamity"
version = "0.3.2-beta"
description = "A macOS proxy client based on SingBox"
authors = ["you"]
edition = "2021"

[lib]
name = "calamity_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros"] }
dirs = "6"
log = "0.4"
libc = "0.2"
base64 = "0.22"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tokio-util = "0.7"
plist = "1"
calamity-core = { path = "../crates/calamity-core", features = ["macos"] }
