[package]
name = "calamity-cli"
version = "0.3.0-beta"
edition = "2024"
description = "CLI client for Calamity proxy"

[[bin]]
name = "calamity"
path = "src/main.rs"

[dependencies]
calamity-core = { path = "../calamity-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
