[package]
name = "calamity-core"
version = "0.3.0-beta"
edition = "2024"
description = "Shared core library for Calamity proxy client"

[features]
default = []
macos = []
linux = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "macros", "rt-multi-thread"] }
dirs = "6"
log = "0.4"
libc = "0.2"
if-addrs = "0.13"
base64 = "0.22"
chrono = "0.4"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
tokio-util = "0.7"
plist = "1"
rustybgp-packet = { git = "https://github.com/osrg/rustybgp" }
